Fix checkstyle errors — a few remain (#1749)